--- a/src/app/events/events-details/events-details.component.html
+++ b/src/app/events/events-details/events-details.component.html
@@ -34,5 +34,5 @@
   </div>
 
   <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
-  <create-session *ngIf="addMode"></create-session>
+  <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
