Finished, need to implement showing all events in nav-bar

--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -19,7 +19,8 @@
           </a>
           <ul class="dropdown-menu">
             <li >
-              <a href="">Angular Connect</a>
+              <a *ngFor="let session of foundSessions"
+                 [routerLink]="['/events', session.eventId]">{{session.name}} </a>
             </li>
           </ul>
         </li>
